# StudioCTRL

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
src/: App.svelte  app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/lib/: api.ts  cameras.ts  logstore.ts  types.ts  util.ts
src/lib/components/: Button.svelte  ColorChannels.svelte  LogPanel.svelte  Section.svelte  Segmented.svelte  SettingsModal.svelte  Sidebar.svelte  Slider.svelte  Stepper.svelte  Toggle.svelte
src/lib/panels/: ColorPanel.svelte  ExposurePanel.svelte  LensPanel.svelte  RecordBar.svelte
