[package]
name = "studioctrl"
version = "0.1.0"
description = "Fast, beautiful desktop controller for Blackmagic Micro Studio Camera 4K G2"
authors = ["tuikat"]
license = "PolyForm-Noncommercial-1.0.0"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "studioctrl_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
